--- a/ControlGUI/packages.config
+++ b/ControlGUI/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NAudio" version="1.8.3" targetFramework="net461" />
+  <package id="NAudio" version="1.9.0" targetFramework="net461" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net461" />
+  <package id="SharpDX.DirectInput" version="4.2.0" targetFramework="net461" />
 </packages>
